@@ -21,7 +21,7 @@ Type 'q()' to quit R.
 > pdf("reg-tests-2.pdf", encoding = "ISOLatin1.enc")
 > 
 > ## force standard handling for data frames
-> options(stringsAsFactors=TRUE)
+> options(stringsAsFactors=FALSE) # R >= 4.0.0
 > options(useFancyQuotes=FALSE)
 > 
 > ### moved from various .Rd files
@@ -351,7 +351,8 @@ There were 22 warnings (use warnings() to see them)
 > ## data.frame
 > set.seed(123)
 > L3 <- LETTERS[1:3]
-> d <- data.frame(cbind(x=1, y=1:10), fac = sample(L3, 10, replace=TRUE))
+> d <- data.frame(cbind(x=1, y=1:10), fac = sample(L3, 10, replace=TRUE),
++                 stringsAsFactors=TRUE)
 > str(d)
 'data.frame':	10 obs. of  3 variables:
  $ x  : num  1 1 1 1 1 1 1 1 1 1
@@ -689,7 +690,7 @@ C: 864000 720000 864000 1008000 1152000
 > authors <- data.frame(
 +     surname = c("Tukey", "Venables", "Tierney", "Ripley", "McNeil"),
 +     nationality = c("US", "Australia", "US", "UK", "Australia"),
-+     deceased = c("yes", rep("no", 4)))
++     deceased = c("yes", rep("no", 4)), stringsAsFactors=TRUE)
 > books <- data.frame(
 +     name = c("Tukey", "Venables", "Tierney",
 +              "Ripley", "Ripley", "McNeil", "R Core"),
@@ -700,7 +701,8 @@ C: 864000 720000 864000 1008000 1152000
 +               "Interactive Data Analysis",
 +               "An Introduction to R"),
 +     other.author = c(NA, "Ripley", NA, NA, NA, NA,
-+                      "Venables & Smith"))
++ 		     "Venables & Smith"),
++ 	   stringsAsFactors=TRUE)
 > b2 <- books; names(b2)[1] <- names(authors)[1]
 > 
 > merge(authors, b2, all.x = TRUE)
@@ -4180,7 +4182,8 @@ Warning message:
 +               3, 6)
 > foo <- tempfile()
 > write.table(Mat, foo, col.names = FALSE, row.names = FALSE)
-> read.table(foo, colClasses = c(NA, NA, "NULL", "character", "Date", "POSIXct"))
+> read.table(foo, colClasses = c(NA, NA, "NULL", "character", "Date", "POSIXct"),
++            stringsAsFactors=TRUE)
   V1 V2 V4         V5                  V6
 1  1  a  A 2004-01-01 2004-01-01 12:00:00
 2  2  b  B 2004-02-01 2004-02-01 12:00:00
@@ -4188,7 +4191,8 @@ Warning message:
 > unlist(sapply(.Last.value, class))
          V1          V2          V4          V5         V61         V62 
   "integer"    "factor" "character"      "Date"   "POSIXct"    "POSIXt" 
-> read.table(foo, colClasses = c("factor",NA,"NULL","factor","Date","POSIXct"))
+> read.table(foo, colClasses = c("factor",NA,"NULL","factor","Date","POSIXct"),
++            stringsAsFactors=TRUE)
   V1 V2 V4         V5                  V6
 1  1  a  A 2004-01-01 2004-01-01 12:00:00
 2  2  b  B 2004-02-01 2004-02-01 12:00:00
@@ -4196,7 +4200,7 @@ Warning message:
 > unlist(sapply(.Last.value, class))
        V1        V2        V4        V5       V61       V62 
  "factor"  "factor"  "factor"    "Date" "POSIXct"  "POSIXt" 
-> read.table(foo, colClasses = c(V4="character"))
+> read.table(foo, colClasses = c(V4="character"), stringsAsFactors=TRUE)
   V1 V2 V3 V4         V5               V6
 1  1  a  1  A 2004-01-01 2004-01-01 12:00
 2  2  b  2  B 2004-02-01 2004-02-01 12:00
@@ -7111,7 +7115,8 @@ g(y)(x)
 > 
 > 
 > ## PR#15247 : str() on invalid data frame names (where print() works):
-> d <- data.frame(1:3, "B", 4); names(d) <- c("A", "B\xba","C\xabcd")
+> d <- data.frame(1:3, "B", 4, stringsAsFactors=TRUE)
+> names(d) <- c("A", "B\xba","C\xabcd")
 > str(d)
 'data.frame':	3 obs. of  3 variables:
  $ A      : int  1 2 3
@@ -8038,4 +8043,15 @@ mean of x
  $ Volume: num  10.3 10.3 10.2 16.4 18.8 19.7 15.6 18.2 22.6 19.9 ...
  - attr(*, "someA")= int [1:77] 1 2 3 4 5 6 7 8 9 10 ...
 > ## now shows the *length* of "someA"
+> 
+> 
+> ## summaryRprof() bug PR#15886 :
+> Rprof(tf <- tempfile("Rprof.out"), memory.profiling=TRUE, line.profiling=FALSE)
+> out <- lapply(1:10000, rnorm, n= 512)
+> Rprof(NULL)
+> length(readLines(tf)) # ca. 10 .. 20 lines
+[1] 16
+> op <- options(warn = 2) # no warnings, even !
+> for (cs in 1:21) s <- summaryRprof(tf, memory="tseries", chunksize=cs)
+> options(op) ## "always" triggered an error (or a warning) in R <= 3.6.3
 > 
